--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   <meta name="color-scheme" content="light" />
   <meta name="robots" content="index,follow" />
 
+  <!-- Apply saved language early (prevents LTR/RTL flash) -->
+  <script>
+    (function(){
+      try{
+        var lang = localStorage.getItem('ipordise_lang') || 'en';
+        document.documentElement.lang = lang;
+        document.documentElement.dir = (lang === 'ar') ? 'rtl' : 'ltr';
+      }catch(e){}
+    })();
+  </script>
+
   <!-- Social preview (Open Graph / Twitter) -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="IPORDISE PARFUM" />
@@ -46,7 +57,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -84,11 +95,25 @@
             <span id="langLabel">EN</span> ▾
           </button>
           <div class="langMenu" id="langMenu" role="menu" aria-label="Language menu">
-            <button class="langOption" type="button" data-set-lang="en" role="menuitemradio" aria-checked="true">English</button>
-            <button class="langOption" type="button" data-set-lang="fr" role="menuitemradio" aria-checked="false">Français</button>
-            <button class="langOption" type="button" data-set-lang="ar" role="menuitemradio" aria-checked="false">العربية</button>
+            <button class="langOption" type="button" data-set-lang="en" role="menuitemradio" aria-checked="true">
+              <img class="flag" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f1fa-1f1f8.svg" alt="" aria-hidden="true" loading="lazy" />
+              English
+            </button>
+            <button class="langOption" type="button" data-set-lang="fr" role="menuitemradio" aria-checked="false">
+              <img class="flag" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f1eb-1f1f7.svg" alt="" aria-hidden="true" loading="lazy" />
+              Français
+            </button>
+            <button class="langOption" type="button" data-set-lang="ar" role="menuitemradio" aria-checked="false">
+              <img class="flag" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f1f2-1f1e6.svg" alt="" aria-hidden="true" loading="lazy" />
+              العربية
+            </button>
           </div>
         </div>
+
+        <button class="icon-btn fav-btn" id="btnFav" aria-label="Open favourites" title="Favourites">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg>
+          <span class="cart-badge fav-badge" id="favCount" role="status" aria-live="polite">0</span>
+        </button>
 
         <button class="icon-btn cart-btn" id="btnCart" aria-label="Open cart">
           <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
@@ -113,7 +138,7 @@
 
   <!-- Main -->
   <main id="main">
-    <!-- Hero -->
+    <!-- Hero (photo-only, language-aware) -->
     <section class="hero" aria-label="Hero">
       <div class="container">
         <div class="hero__media">
@@ -130,6 +155,25 @@
             width="1920"
             height="1080"
           />
+        </div>
+      </div>
+    </section>
+
+    <!-- Concierge / Personalized help -->
+    <section class="section" aria-label="Concierge">
+      <div class="container container--wide">
+        <div class="promo-banner animate-on-scroll">
+          <div class="promo-banner__text">
+            <h3 data-i18n="concierge_title">Personalized recommendations</h3>
+            <p class="muted" data-i18n="concierge_desc">Tell us the notes you love (vanilla, musk, fresh, floral, oud…) and we’ll suggest the perfect match in minutes.</p>
+            <div class="hero__cta">
+              <a class="btn btn--primary" href="https://wa.me/212663750210" target="_blank" rel="noopener" data-i18n="concierge_cta_wa">Chat on WhatsApp</a>
+              <a class="btn btn--ghost" href="#finder" data-i18n="concierge_cta_finder">Try the Fragrance Finder</a>
+            </div>
+          </div>
+          <div class="promo-banner__visual" aria-hidden="true">
+            <img src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/Personalized%20recommendations.webp" alt="" loading="lazy" width="260" height="260" decoding="async" />
+          </div>
         </div>
       </div>
     </section>
@@ -534,7 +578,32 @@
     </footer>
   </main>
 
-  <!-- Cart Drawer -->
+  
+
+  <!-- Favourites Drawer -->
+  <aside class="drawer" id="favDrawer" aria-hidden="true">
+    <div class="drawer__overlay" data-close-fav></div>
+    <div class="drawer__panel drawer__panel--cart" role="dialog" aria-modal="true" aria-label="Favourites">
+      <div class="drawer__header">
+        <div class="drawer__title" data-i18n="fav_title">Your favourites</div>
+        <button class="icon-btn" data-close-fav aria-label="Close favourites">
+          <span class="icon icon--close" aria-hidden="true"></span>
+        </button>
+      </div>
+
+      <div class="drawer__content cart">
+        <div class="cart__items" id="favItems"></div>
+
+        <div class="cart__summary">
+          <p class="muted" style="margin:0 0 10px;" data-i18n="fav_desc">Save perfumes you love and come back anytime.</p>
+          <button class="btn btn--ghost btn--full" id="btnClearFav" type="button" data-i18n="fav_clear">Clear favourites</button>
+          <a class="btn btn--primary btn--full" href="index.html#best" data-i18n="fav_shop">Continue shopping</a>
+        </div>
+      </div>
+    </div>
+  </aside>
+
+<!-- Cart Drawer -->
   <aside class="drawer" id="cartDrawer" aria-hidden="true">
     <div class="drawer__overlay" data-close-drawer></div>
     <div class="drawer__panel drawer__panel--cart" role="dialog" aria-modal="true" aria-label="Cart">
@@ -768,7 +837,7 @@
         <p class="promo-toast__title" data-i18n="toast_title">Flash deal 🎁</p>
         <p class="promo-toast__meta"><span data-i18n="toast_meta">Shop now before the offer ends</span> • <strong id="toastCountdown">00:00:00</strong></p>
         <div class="promo-toast__actions">
-          <a class="btn btn--small btn--primary" href="#deals" data-i18n="toast_cta">Shop deals</a>
+          <a class="btn btn--small btn--primary" href="#best" data-i18n="toast_cta">Shop deals</a>
           <a class="btn btn--small btn--ghost" href="#best" data-i18n="toast_alt">Best sellers</a>
         </div>
       </div>
