--- a/product.html
+++ b/product.html
@@ -5,9 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>IPORDISE PARFUM</title>
   <meta name="description" content="IPORDISE PARFUM – Discover premium fragrances for women, men, unisex and more. Shop best sellers, new arrivals, and deals." />
+
+  <!-- Apply saved language early (prevents LTR/RTL flash) -->
+  <script>
+    (function(){
+      try{
+        var lang = localStorage.getItem('ipordise_lang') || 'en';
+        document.documentElement.lang = lang;
+        document.documentElement.dir = (lang === 'ar') ? 'rtl' : 'ltr';
+      }catch(e){}
+    })();
+  </script>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -45,11 +57,16 @@
             <span id="langLabel">EN</span> ▾
           </button>
           <div class="langMenu" id="langMenu" role="menu" aria-label="Language menu">
-            <button class="langOption" type="button" data-set-lang="en" role="menuitemradio" aria-checked="true">English</button>
-            <button class="langOption" type="button" data-set-lang="fr" role="menuitemradio" aria-checked="false">Français</button>
-            <button class="langOption" type="button" data-set-lang="ar" role="menuitemradio" aria-checked="false">العربية</button>
+            <button class="langOption" type="button" data-set-lang="en" role="menuitemradio" aria-checked="true"><span class="flag" aria-hidden="true">🇺🇸</span>English</button>
+            <button class="langOption" type="button" data-set-lang="fr" role="menuitemradio" aria-checked="false"><span class="flag" aria-hidden="true">🇫🇷</span>Français</button>
+            <button class="langOption" type="button" data-set-lang="ar" role="menuitemradio" aria-checked="false"><span class="flag" aria-hidden="true">🇲🇦</span>العربية</button>
           </div>
         </div>
+
+        <button class="icon-btn fav-btn" id="btnFav" aria-label="Open favourites" title="Favourites">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg>
+          <span class="cart-badge fav-badge" id="favCount" role="status" aria-live="polite">0</span>
+        </button>
 
         <button class="icon-btn cart-btn" id="btnCart" aria-label="Open cart">
           <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
@@ -104,7 +121,32 @@
     </div>
   </footer>
 
-  <!-- Cart Drawer -->
+  
+
+  <!-- Favourites Drawer -->
+  <aside class="drawer" id="favDrawer" aria-hidden="true">
+    <div class="drawer__overlay" data-close-fav></div>
+    <div class="drawer__panel drawer__panel--cart" role="dialog" aria-modal="true" aria-label="Favourites">
+      <div class="drawer__header">
+        <div class="drawer__title" data-i18n="fav_title">Your favourites</div>
+        <button class="icon-btn" data-close-fav aria-label="Close favourites">
+          <span class="icon icon--close" aria-hidden="true"></span>
+        </button>
+      </div>
+
+      <div class="drawer__content cart">
+        <div class="cart__items" id="favItems"></div>
+
+        <div class="cart__summary">
+          <p class="muted" style="margin:0 0 10px;" data-i18n="fav_desc">Save perfumes you love and come back anytime.</p>
+          <button class="btn btn--ghost btn--full" id="btnClearFav" type="button" data-i18n="fav_clear">Clear favourites</button>
+          <a class="btn btn--primary btn--full" href="index.html#best" data-i18n="fav_shop">Continue shopping</a>
+        </div>
+      </div>
+    </div>
+  </aside>
+
+<!-- Cart Drawer -->
   <aside class="drawer" id="cartDrawer" aria-hidden="true">
     <div class="drawer__overlay" data-close-drawer></div>
     <div class="drawer__panel drawer__panel--cart" role="dialog" aria-modal="true" aria-label="Cart">
