--- a/index.html
+++ b/index.html
@@ -175,6 +175,32 @@
             <img src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/Personalized%20recommendations.webp" alt="" loading="lazy" width="260" height="260" decoding="async" />
           </div>
         </div>
+        <div class="reco-gallery animate-on-scroll" aria-label="Personalized recommendations gallery">
+          <div class="reco-gallery__item">
+            <img
+              class="reco-gallery__img"
+              src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/Luxurious%20night%20with%20IPORDISE%20parfum.png"
+              alt="IPORDISE luxury night"
+              loading="lazy"
+              decoding="async"
+              width="1400"
+              height="520"
+            />
+            <a class="reco-gallery__cta" href="#best" data-i18n="hero_cta_badge">Discover our products</a>
+          </div>
+          <div class="reco-gallery__item">
+            <img
+              class="reco-gallery__img"
+              src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/Moroccan%20elegance%20by%20the%20waterfront.png"
+              alt="Moroccan elegance by the waterfront"
+              loading="lazy"
+              decoding="async"
+              width="1400"
+              height="520"
+            />
+            <a class="reco-gallery__cta" href="#best" data-i18n="hero_cta_badge">Discover our products</a>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -213,27 +239,6 @@
           </div>
         </div>
 
-        <!-- Ads photos (auto-rotate) -->
-        <div class="adsRotator animate-on-scroll" id="adsRotator" aria-label="Special offers">
-          <img
-            class="adsRotator__img adsRotator__img--1"
-            src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/ADSPHOTO.png"
-            alt="Special offer banner"
-            loading="lazy"
-            decoding="async"
-            width="1400"
-            height="520"
-          />
-          <img
-            class="adsRotator__img adsRotator__img--2"
-            src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/ADSPHOTO1.png"
-            alt="Special offer banner"
-            loading="lazy"
-            decoding="async"
-            width="1400"
-            height="520"
-          />
-        </div>
       </div>
     </section>
 
