--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
         <div class="cart__items" id="favItems"></div>
 
         <div class="cart__summary">
-          <p class="muted" style="margin:0 0 10px;" data-i18n="fav_desc">Save perfumes you love and come back anytime.</p>
+          <p class="muted fav-desc" data-i18n="fav_desc">Save perfumes you love and come back anytime.</p>
           <button class="btn btn--ghost btn--full" id="btnClearFav" type="button" data-i18n="fav_clear">Clear favourites</button>
           <a class="btn btn--primary btn--full" href="index.html#best" data-i18n="fav_shop">Continue shopping</a>
         </div>
