--- a/index.html
+++ b/index.html
@@ -542,6 +542,26 @@
               </div>
             </label>
             <p class="newsletter__note muted">No spam. Unsubscribe anytime.</p>
+            <div class="newsletter__social" aria-label="Follow us">
+              <a class="socialIcon" href="https://www.instagram.com/ipordise_parfums/" target="_blank" rel="noopener" aria-label="Instagram">
+                <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                  <rect x="3" y="3" width="18" height="18" rx="5" ry="5"></rect>
+                  <circle cx="12" cy="12" r="4"></circle>
+                  <circle cx="17" cy="7" r="1"></circle>
+                </svg>
+              </a>
+              <a class="socialIcon" href="https://www.facebook.com/profile.php?id=61563285998567" target="_blank" rel="noopener" aria-label="Facebook">
+                <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor" aria-hidden="true">
+                  <path d="M13.5 9H16V6h-2.5C11.6 6 10 7.6 10 9.5V12H8v3h2v6h3v-6h2.4l.6-3H13v-2c0-.6.4-1 1-1z"></path>
+                </svg>
+              </a>
+              <a class="socialIcon" href="https://www.youtube.com/@FragranceMorocco" target="_blank" rel="noopener" aria-label="YouTube">
+                <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor" aria-hidden="true">
+                  <path d="M23 12s0-4-1-6c-1-1-3-1-3-1s-4-.3-7-.3-7 .3-7 .3-2 0-3 1C1 8 1 12 1 12s0 4 1 6c1 1 3 1 3 1s4 .3 7 .3 7-.3 7-.3 2 0 3-1c1-2 1-6 1-6z"></path>
+                  <path d="M10 15.5v-7l6 3.5-6 3.5z" fill="#fff"></path>
+                </svg>
+              </a>
+            </div>
             <div class="formNote muted" id="formNote"></div>
           </form>
         </div>
@@ -569,6 +589,13 @@
             <div class="footer__title" data-i18n="footer_support">Support</div>
             <a href="https://wa.me/212663750210" target="_blank" rel="noopener">WhatsApp</a>
             <a href="mailto:Ipordise@gmail.com">Email</a>
+          </div>
+
+          <div class="footer__col">
+            <div class="footer__title">Social</div>
+            <a href="https://www.instagram.com/ipordise_parfums/" target="_blank" rel="noopener">Instagram</a>
+            <a href="https://www.facebook.com/profile.php?id=61563285998567" target="_blank" rel="noopener">Facebook</a>
+            <a href="https://www.youtube.com/@FragranceMorocco" target="_blank" rel="noopener">YouTube</a>
           </div>
           
           <div class="footer__col">
