--- a/product.html
+++ b/product.html
@@ -5,6 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>IPORDISE PARFUM</title>
   <meta name="description" content="IPORDISE PARFUM – Discover premium fragrances for women, men, unisex and more. Shop best sellers, new arrivals, and deals." />
+  <meta name="theme-color" content="#c09a59" />
+  <meta name="robots" content="index,follow" />
+
+  <!-- Social preview (Open Graph / Twitter) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="IPORDISE PARFUM" />
+  <meta property="og:description" content="IPORDISE PARFUM – Discover premium fragrances for women, men, unisex and more. Shop best sellers, new arrivals, and deals." />
+  <meta property="og:image" content="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/hero%20section%20english.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="IPORDISE PARFUM" />
+  <meta name="twitter:description" content="IPORDISE PARFUM – Discover premium fragrances for women, men, unisex and more. Shop best sellers, new arrivals, and deals." />
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/hero%20section%20english.png" />
 
   <!-- Apply saved language early (prevents LTR/RTL flash) -->
   <script>
@@ -105,6 +117,13 @@
           <div class="footer__title" data-i18n="footer_support">Support</div>
           <a href="https://wa.me/212663750210" target="_blank" rel="noopener">WhatsApp</a>
           <a href="mailto:Ipordise@gmail.com">Email</a>
+        </div>
+
+        <div class="footer__col">
+          <div class="footer__title">Social</div>
+          <a href="https://www.instagram.com/ipordise_parfums/" target="_blank" rel="noopener">Instagram</a>
+          <a href="https://www.facebook.com/profile.php?id=61563285998567" target="_blank" rel="noopener">Facebook</a>
+          <a href="https://www.youtube.com/@FragranceMorocco" target="_blank" rel="noopener">YouTube</a>
         </div>
         
         <div class="footer__col">
