--- a/product.html
+++ b/product.html
@@ -40,7 +40,7 @@
   <!-- Top notice -->
   <div class="topbar">
     <div class="container topbar__inner">
-      <span class="topbar__text" data-i18n="topbar_text">Free delivery in Morocco from 299 MAD • Pay on delivery available</span>
+      <span class="topbar__text" data-i18n="topbar_text">عطور أصلية، جودة مضمونة، تجربة فريدة – IPORDISE</span>
       <a class="topbar__link" href="index.html#deals" data-i18n="topbar_link">See deals</a>
     </div>
   </div>
