--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
           <div>
             <h2 data-i18n="sec_best_title">Best sellers</h2>
             <p class="muted" data-i18n="sec_best_desc">Top-rated picks customers love.</p>
+            <div class="section__filter" id="categoryFilterLabel" aria-live="polite"></div>
           </div>
           <div class="tools">
             <select id="sortSelect" class="select" aria-label="Sort products">
