--- a/index.html
+++ b/index.html
@@ -141,23 +141,53 @@
     <!-- Hero (photo-only, language-aware) -->
     <section class="hero" aria-label="Hero">
       <div class="container">
-        <div class="hero__media">
-          <img
-            id="heroImage"
-            src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/hero%20section%20english.png"
-            data-src-en="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/hero%20section%20english.png"
-            data-src-fr="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/hero%20section%20frensh.png"
-            data-src-ar="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/hero%20section%20arabic.png"
-            alt="IPORDISE PARFUM hero"
-            loading="eager"
-            fetchpriority="high"
-            decoding="async"
-            width="1920"
-            height="1080"
-          />
+        <div class="hero__media" aria-hidden="true">
+          <div class="hero__bg hero__bg--a is-active"></div>
+          <div class="hero__bg hero__bg--b"></div>
         </div>
       </div>
     </section>
+
+    <!-- Trust strip (below hero only) -->
+    <section class="trustStrip" aria-label="Store trust">
+      <div class="container trustStrip__inner">
+        <div class="trustStrip__item">
+          <span class="trustStrip__icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+              <path d="M20 6L9 17l-5-5"/>
+            </svg>
+          </span>
+          <div>
+            <strong data-i18n="trust_auth">100% Authentic</strong>
+            <div class="muted small" data-i18n="trust_auth_desc">Original fragrances sourced from trusted suppliers.</div>
+          </div>
+        </div>
+        <div class="trustStrip__item">
+          <span class="trustStrip__icon trustStrip__icon--wa" aria-hidden="true">
+            <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor" aria-hidden="true">
+              <path d="M20.52 3.48A11.94 11.94 0 0 0 12.05 0C5.46 0 .12 5.33.12 11.92c0 2.1.55 4.15 1.6 5.96L0 24l6.3-1.65a11.9 11.9 0 0 0 5.73 1.46h.01c6.59 0 11.92-5.33 11.92-11.92 0-3.18-1.24-6.18-3.44-8.41Zm-8.47 18.3h-.01a9.9 9.9 0 0 1-5.04-1.38l-.36-.21-3.74.98 1-3.65-.23-.37a9.88 9.88 0 1 1 8.38 4.63Zm5.41-7.4c-.3-.15-1.76-.87-2.03-.97-.27-.1-.47-.15-.66.15-.2.3-.76.97-.93 1.17-.17.2-.34.22-.64.07-.3-.15-1.27-.47-2.42-1.5-.9-.8-1.5-1.78-1.68-2.08-.17-.3-.02-.46.13-.6.13-.13.3-.34.45-.5.15-.17.2-.28.3-.47.1-.2.05-.37-.02-.52-.07-.15-.66-1.6-.9-2.2-.24-.58-.48-.5-.66-.5h-.57c-.2 0-.52.07-.8.37-.27.3-1.05 1.03-1.05 2.52 0 1.49 1.08 2.94 1.23 3.15.15.2 2.12 3.24 5.15 4.55.72.31 1.28.5 1.72.64.72.23 1.38.2 1.9.12.58-.09 1.76-.72 2.01-1.41.25-.7.25-1.29.17-1.41-.08-.12-.27-.2-.57-.35Z"/>
+            </svg>
+          </span>
+          <div>
+            <strong data-i18n="trust_support">24/7 WhatsApp Support</strong>
+            <div class="muted small" data-i18n="trust_support_desc">Get fast recommendations and order help anytime.</div>
+          </div>
+        </div>
+        <div class="trustStrip__item">
+          <span class="trustStrip__icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+              <path d="M9 14l-4-4 4-4"/>
+              <path d="M5 10h9a5 5 0 0 1 0 10h-3"/>
+            </svg>
+          </span>
+          <div>
+            <strong data-i18n="trust_returns">Easy returns</strong>
+            <div class="muted small" data-i18n="trust_returns_desc">Hassle‑free exchange if something isn’t right.</div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
     <!-- Concierge / Personalized help -->
     <section class="section" aria-label="Concierge">
@@ -276,6 +306,38 @@
       </div>
     </section>
 
+    <!-- Shop by Scent Family -->
+    <section class="section" id="families">
+      <div class="container">
+        <div class="section__head animate-on-scroll">
+          <h2 data-i18n="sec_families_title">Shop by Scent Family</h2>
+          <p class="muted" data-i18n="sec_families_desc">Pick a vibe and discover perfumes that match.</p>
+        </div>
+        <div class="families">
+          <button class="familyCard" type="button" data-quick-filter="fresh">
+            <span class="familyCard__title" data-i18n="family_fresh">Fresh</span>
+            <span class="familyCard__sub">Citrus • Clean</span>
+          </button>
+          <button class="familyCard" type="button" data-quick-filter="floral">
+            <span class="familyCard__title" data-i18n="family_floral">Floral</span>
+            <span class="familyCard__sub">Rose • Jasmine</span>
+          </button>
+          <button class="familyCard" type="button" data-quick-filter="woody">
+            <span class="familyCard__title" data-i18n="family_woody">Woody</span>
+            <span class="familyCard__sub">Oud • Cedar</span>
+          </button>
+          <button class="familyCard" type="button" data-quick-filter="oriental">
+            <span class="familyCard__title" data-i18n="family_oriental">Oriental</span>
+            <span class="familyCard__sub">Amber • Spices</span>
+          </button>
+          <button class="familyCard" type="button" data-quick-filter="vanilla">
+            <span class="familyCard__title" data-i18n="family_gourmand">Gourmand</span>
+            <span class="familyCard__sub">Vanilla • Sweet</span>
+          </button>
+        </div>
+      </div>
+    </section>
+
     <!-- Products: Best Sellers -->
     <section class="section" id="best">
       <div class="container">
@@ -302,6 +364,15 @@
               </button>
             </div>
           </div>
+        </div>
+
+        <div class="quickFilters" aria-label="Quick filters">
+          <span class="quickFilters__label" data-i18n="quick_filters">Quick filters:</span>
+          <button class="quickFilter" type="button" data-quick-filter="vanilla" data-i18n="quick_vanilla">Vanilla</button>
+          <button class="quickFilter" type="button" data-quick-filter="oud" data-i18n="quick_oud">Oud</button>
+          <button class="quickFilter" type="button" data-quick-filter="fresh" data-i18n="quick_fresh">Fresh</button>
+          <button class="quickFilter" type="button" data-quick-filter="musk" data-i18n="quick_musk">Musk</button>
+          <button class="quickFilter" type="button" data-quick-filter="gift" data-i18n="quick_gift">Gift</button>
         </div>
 
         <div class="productCarousel" role="region" aria-label="Best sellers carousel">
@@ -597,6 +668,15 @@
             <a href="https://www.instagram.com/ipordise_parfums/" target="_blank" rel="noopener">Instagram</a>
             <a href="https://www.facebook.com/profile.php?id=61563285998567" target="_blank" rel="noopener">Facebook</a>
             <a href="https://www.youtube.com/@FragranceMorocco" target="_blank" rel="noopener">YouTube</a>
+          </div>
+
+          <div class="footer__col">
+            <div class="footer__title" data-i18n="footer_payments">Payments</div>
+            <div class="paymentIcons" aria-label="Payment methods">
+              <span class="paymentIcon">VISA</span>
+              <span class="paymentIcon">Mastercard</span>
+              <span class="paymentIcon" data-i18n="payment_cod">Cash on Delivery</span>
+            </div>
           </div>
           
           <div class="footer__col">
