--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
     <!-- Hero (photo-only, language-aware) -->
     <section class="hero" aria-label="Hero">
       <div class="container">
-        <div class="hero__media" aria-hidden="true">
-          <div class="hero__bg hero__bg--a is-active"></div>
-          <div class="hero__bg hero__bg--b"></div>
+        <div class="hero__media">
+          <div class="hero__bg hero__bg--a is-active" aria-hidden="true"></div>
+          <div class="hero__bg hero__bg--b" aria-hidden="true"></div>
         </div>
       </div>
     </section>
@@ -202,15 +202,15 @@
             </div>
           </div>
           <div class="promo-banner__visual" aria-hidden="true">
-            <img src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/Personalized%20recommendations.webp" alt="" loading="lazy" width="260" height="260" decoding="async" />
+            <img src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/perfumes.png" alt="" loading="lazy" width="260" height="260" decoding="async" />
           </div>
         </div>
         <div class="reco-gallery animate-on-scroll" aria-label="Personalized recommendations gallery">
           <div class="reco-gallery__item">
             <img
               class="reco-gallery__img"
-              src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/Luxurious%20night%20with%20IPORDISE%20parfum.png"
-              alt="IPORDISE luxury night"
+              src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/explore%20the%20collection%20men.png"
+              alt="Explore the collection men"
               loading="lazy"
               decoding="async"
               width="1400"
@@ -221,8 +221,8 @@
           <div class="reco-gallery__item">
             <img
               class="reco-gallery__img"
-              src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/Moroccan%20elegance%20by%20the%20waterfront.png"
-              alt="Moroccan elegance by the waterfront"
+              src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/explore%20the%20collection%20woman.png"
+              alt="Explore the collection woman"
               loading="lazy"
               decoding="async"
               width="1400"
