--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>IPORDISE PARFUM</title>
   <meta name="description" content="IPORDISE PARFUM – Discover premium fragrances for women, men, unisex and more. Shop best sellers, new arrivals, and deals." />
-  <meta name="theme-color" content="#c09a59" />
+  <meta name="theme-color" content="#8b5a3c" />
   <meta name="color-scheme" content="light" />
   <meta name="robots" content="index,follow" />
 
@@ -62,6 +62,17 @@
 </head>
 
 <body>
+  <!-- Premium Loading Screen -->
+  <div class="loading-screen" id="loadingScreen">
+    <div class="loading-logo">
+      <img src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/logo.jpeg" alt="IPORDISE PARFUM" />
+    </div>
+    <div class="loading-text">Crafting Luxury Experiences</div>
+    <div class="loading-bar">
+      <div class="loading-progress"></div>
+    </div>
+  </div>
+
   <a class="skipLink" href="#main">Skip to content</a>
   <!-- Top notice -->
   <div class="topbar">
