--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="loading-logo">
       <img src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/logo.jpeg" alt="IPORDISE PARFUM" />
     </div>
-    <div class="loading-text">Crafting Luxury Experiences</div>
+    <div class="loading-text" id="loadingText">Crafting Luxury Experiences</div>
     <div class="loading-bar">
       <div class="loading-progress"></div>
     </div>
