--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -166,6 +167,12 @@
         <div class="hero__media">
           <div class="hero__bg hero__bg--a is-active" aria-hidden="true"></div>
           <div class="hero__bg hero__bg--b" aria-hidden="true"></div>
+          <a href="#categories" class="hero__shop">
+            <span data-i18n="hero_cta_badge">Explore the collection</span>
+            <span class="hero__shop-icon">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+            </span>
+          </a>
         </div>
       </div>
     </section>
@@ -253,6 +260,17 @@
             <a class="reco-gallery__cta" href="#best" data-i18n="hero_cta_badge">Explore the collection</a>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- Masterpiece Highlight -->
+    <section class="masterpiece animate-on-scroll">
+      <img class="masterpiece__bg" src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/hero%20section%20english.png" alt="" loading="lazy">
+      <div class="masterpiece__content">
+        <span class="masterpiece__badge">The Royal Standard</span>
+        <h2 class="masterpiece__title" data-i18n="hero_title">Discover Your Signature Scent</h2>
+        <p class="masterpiece__desc">Experience the power of absolute luxury. A symphony of rare ingredients, crafted for those who demand the exceptional.</p>
+        <a href="product.html?id=p2" class="mp-btn">Shop The Legend</a>
       </div>
     </section>
 
