--- a/index.html
+++ b/index.html
@@ -218,50 +218,56 @@
     </section>
 
 
-    <!-- Concierge / Personalized help -->
-    <section class="section" aria-label="Concierge">
+
+    <!-- Scents Wardrobe Spotlight -->
+    <section class="section" aria-label="Collections Spotlight">
       <div class="container container--wide">
-        <div class="promo-banner animate-on-scroll">
-          <div class="promo-banner__text">
-            <h3 data-i18n="concierge_title">Personalized recommendations</h3>
-            <p class="muted" data-i18n="concierge_desc">Tell us the notes you love (vanilla, musk, fresh, floral, oud…) and we’ll suggest the perfect match in minutes.</p>
-            <div class="hero__cta">
-              <a class="btn btn--primary" href="https://wa.me/212663750210" target="_blank" rel="noopener" data-i18n="concierge_cta_wa">Chat on WhatsApp</a>
-              <a class="btn btn--ghost" href="#finder" data-i18n="concierge_cta_finder">Try the Fragrance Finder</a>
-            </div>
-          </div>
-          <div class="promo-banner__visual" aria-hidden="true">
-            <img src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/perfumes.png" alt="" loading="lazy" width="260" height="260" decoding="async" />
-          </div>
-        </div>
-        <div class="reco-gallery animate-on-scroll" aria-label="Personalized recommendations gallery">
-          <div class="reco-gallery__item">
-            <img
-              class="reco-gallery__img"
-              src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/explore%20the%20collection%20men.png"
-              alt="Explore the collection men"
-              loading="lazy"
-              decoding="async"
-              width="1400"
-              height="520"
-            />
-            <a class="reco-gallery__cta" href="#best" data-i18n="hero_cta_badge">Explore the collection</a>
-          </div>
-          <div class="reco-gallery__item">
-            <img
-              class="reco-gallery__img"
-              src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/explore%20the%20collection%20woman.png"
-              alt="Explore the collection woman"
-              loading="lazy"
-              decoding="async"
-              width="1400"
-              height="520"
-            />
-            <a class="reco-gallery__cta" href="#best" data-i18n="hero_cta_badge">Explore the collection</a>
-          </div>
+        <div class="aesthetic-grid animate-on-scroll">
+          
+          <!-- Large Card -->
+          <a href="product.html?id=p2" class="aesthetic-card aesthetic-card--large">
+             <!-- Using existing hero image for unified look -->
+             <img class="aesthetic-card__img" src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/hero%20section%20english.png" alt="Signature Collection" loading="lazy">
+             <div class="aesthetic-card__content">
+               <span class="aesthetic-card__subtitle">The Masterpiece</span>
+               <h3 class="aesthetic-card__title">Royal Essence<br>Collection</h3>
+               <span class="aesthetic-card__btn">
+                 Discover The Legend 
+                 <span class="aesthetic-arrow"><svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14M12 5l7 7-7 7"/></svg></span>
+               </span>
+             </div>
+          </a>
+
+          <!-- Medium Card Top - For Him -->
+          <a href="#best" class="aesthetic-card aesthetic-card--medium">
+             <img class="aesthetic-card__img" src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/explore%20the%20collection%20men.png" alt="For Him" loading="lazy">
+             <div class="aesthetic-card__content">
+               <span class="aesthetic-card__subtitle">Sophisticated</span>
+               <h3 class="aesthetic-card__title">For Him</h3>
+               <span class="aesthetic-card__btn">
+                 Shop Mens
+                 <span class="aesthetic-arrow"><svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14M12 5l7 7-7 7"/></svg></span>
+               </span>
+             </div>
+          </a>
+
+          <!-- Medium Card Bottom - For Her -->
+          <a href="#best" class="aesthetic-card aesthetic-card--medium">
+             <img class="aesthetic-card__img" src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/explore%20the%20collection%20woman.png" alt="For Her" loading="lazy">
+             <div class="aesthetic-card__content">
+               <span class="aesthetic-card__subtitle">Radiant</span>
+               <h3 class="aesthetic-card__title">For Her</h3>
+               <span class="aesthetic-card__btn">
+                 Shop Womens
+                 <span class="aesthetic-arrow"><svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14M12 5l7 7-7 7"/></svg></span>
+               </span>
+             </div>
+          </a>
+
         </div>
       </div>
     </section>
+
 
     <!-- Masterpiece Highlight -->
     <section class="masterpiece animate-on-scroll">
