--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <!-- Large Card -->
           <a href="product.html?id=p2" class="aesthetic-card aesthetic-card--large">
              <!-- Using existing hero image for unified look -->
-             <img class="aesthetic-card__img" src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/hero%20section%20english.png" alt="Signature Collection" loading="lazy">
+             <img class="aesthetic-card__img" src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/masterpiece2.png" alt="Signature Collection" loading="lazy">
              <div class="aesthetic-card__content">
                <span class="aesthetic-card__subtitle">The Masterpiece</span>
                <h3 class="aesthetic-card__title">Royal Essence<br>Collection</h3>
