--- a/index.html
+++ b/index.html
@@ -468,48 +468,8 @@
           <h2 data-i18n="nav_new">New Arrivals</h2>
           <p class="muted" data-i18n="sec_new_desc">Freshly curated scents, just for you.</p>
         </div>
-        <div class="grid">
-          <!-- Placeholder for new products. This is a temporary visual. -->
-          <article class="card animate-on-scroll">
-            <a href="#" class="card__link">
-              <div class="card__img">
-                <span class="card__tag">New</span>
-                <img src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/logo.jpeg" alt="Coming Soon" loading="lazy" width="200" height="200" decoding="async">
-              </div>
-              <div class="card__body">
-                <div class="card__brand">IPORDISE</div>
-                <h3 class="card__name">Coming Soon...</h3>
-                <div class="card__meta">
-                  <span class="stars" aria-label="Not rated yet">☆☆☆☆☆</span>
-                  <span class="muted small">(0)</span>
-                </div>
-              </div>
-            </a>
-            <div class="card__actions">
-              <div class="card__price">-- MAD</div>
-              <button class="btn btn--small btn--primary" disabled>+ Add</button>
-            </div>
-          </article>
-          <article class="card animate-on-scroll">
-            <a href="#" class="card__link">
-              <div class="card__img">
-                <span class="card__tag">New</span>
-                <img src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/logo.jpeg" alt="Coming Soon" loading="lazy" width="200" height="200" decoding="async">
-              </div>
-              <div class="card__body">
-                <div class="card__brand">IPORDISE</div>
-                <h3 class="card__name">Coming Soon...</h3>
-                <div class="card__meta">
-                  <span class="stars" aria-label="Not rated yet">☆☆☆☆☆</span>
-                  <span class="muted small">(0)</span>
-                </div>
-              </div>
-            </a>
-            <div class="card__actions">
-              <div class="card__price">-- MAD</div>
-              <button class="btn btn--small btn--primary" disabled>+ Add</button>
-            </div>
-          </article>
+        <div class="grid" id="newArrivalsGrid">
+          <!-- JS renders new products here -->
         </div>
       </div>
     </section>
