--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,8 @@
 
     <button class="chatbot__fab" id="chatbotFab" aria-label="Open chat">
       <span class="chatbot__badge" id="chatbotBadge" aria-hidden="true">1</span>
-      <svg class="icon-open" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
+      <!-- Custom Logo -->
+      <img class="icon-open" src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/chatbot%20logo.png" alt="Chatbot" width="48" height="48">
       <svg class="icon-close" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
     </button>
 
